--- a/iosApp/iosApp/Resources/Storyboard.storyboard
+++ b/iosApp/iosApp/Resources/Storyboard.storyboard
@@ -36,10 +36,18 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hQr-go-iKT">
-                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="169.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="160"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="130" id="NO9-mi-4Ay"/>
+                                                        <constraint firstAttribute="height" constant="160" id="ZPl-hS-KSu"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETW-TB-kmX">
-                                                    <rect key="frame" x="0.0" y="169.5" width="130" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="164" width="130" height="26"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="130" id="A4i-48-OeR"/>
+                                                        <constraint firstAttribute="height" constant="26" id="vUp-Bh-6Oz"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -47,14 +55,14 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="ETW-TB-kmX" firstAttribute="leading" secondItem="c6w-ad-Alq" secondAttribute="leading" id="3wy-cD-WkU"/>
-                                            <constraint firstItem="hQr-go-iKT" firstAttribute="top" secondItem="c6w-ad-Alq" secondAttribute="top" id="AhS-Wd-UsQ"/>
-                                            <constraint firstItem="hQr-go-iKT" firstAttribute="leading" secondItem="c6w-ad-Alq" secondAttribute="leading" id="J6W-Ca-MFm"/>
-                                            <constraint firstAttribute="bottom" secondItem="ETW-TB-kmX" secondAttribute="bottom" id="Neu-oL-dhy"/>
-                                            <constraint firstAttribute="trailing" secondItem="hQr-go-iKT" secondAttribute="trailing" id="VlT-Fl-adY"/>
-                                            <constraint firstItem="ETW-TB-kmX" firstAttribute="top" secondItem="hQr-go-iKT" secondAttribute="bottom" id="aTt-my-SQS"/>
-                                            <constraint firstAttribute="trailing" secondItem="ETW-TB-kmX" secondAttribute="trailing" id="xl6-wF-3yj"/>
+                                            <constraint firstItem="ETW-TB-kmX" firstAttribute="leading" secondItem="c6w-ad-Alq" secondAttribute="leading" id="31w-gf-2ad"/>
+                                            <constraint firstAttribute="trailing" secondItem="hQr-go-iKT" secondAttribute="trailing" id="5Sf-aG-LWu"/>
+                                            <constraint firstAttribute="trailing" secondItem="ETW-TB-kmX" secondAttribute="trailing" id="Muu-9p-hQS"/>
+                                            <constraint firstItem="hQr-go-iKT" firstAttribute="leading" secondItem="c6w-ad-Alq" secondAttribute="leading" id="WA6-Ia-paR"/>
+                                            <constraint firstItem="hQr-go-iKT" firstAttribute="top" secondItem="c6w-ad-Alq" secondAttribute="top" id="dRp-gr-FPY"/>
+                                            <constraint firstAttribute="bottom" secondItem="ETW-TB-kmX" secondAttribute="bottom" id="qCQ-Nq-IWU"/>
                                         </constraints>
+                                        <size key="customSize" width="130" height="190"/>
                                         <connections>
                                             <outlet property="imageCell" destination="hQr-go-iKT" id="9WS-pz-7xy"/>
                                             <outlet property="labelCell" destination="ETW-TB-kmX" id="77g-AF-dud"/>
